@@ -16,12 +16,10 @@
                  [org.clojure/clojure "1.10.0"]
                  [org.clojure/tools.nrepl "0.2.13"]
                  [ring/ring-core "1.10.0"]
-                 [ring/ring-json "0.5.1"]
-                 [com.clojure-goes-fast/clj-memory-meter "0.3.0"]]
+                 [ring/ring-json "0.5.1"]]
   :plugins [[lein-shell "0.5.0"]]
   :repl-options {:init-ns user}
   :jvm-opts ^:replace ["-server"
-                       "-Djdk.attach.allowAttachSelf"
                        "-Dclojure.compiler.direct-linking=true"]
   :test-paths ["test" "int-test"]
   :profiles {:security {:plugins [[com.livingsocial/lein-dependency-check "1.4.1"]]
